// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakTimerForm should match snapshot 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-102g4jn"
  >
    <div
      className="css-u7gedr"
      id="break-timer"
      onClick={[Function]}
    >
      <div
        className="css-1a07xhr"
      />
    </div>
    <h4
      className="css-jemg6l"
      htmlFor="break-timer"
    >
      Break Timer
    </h4>
  </div>
</div>
`;

exports[`BreakTimerForm should match snapshot when enabled 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-1lqrh8c"
  >
    <div
      className="css-j7qwjs"
    >
      <label
        className="css-o09rf6"
        htmlFor="break-timer-time"
      >
        <small
          className="css-0"
        >
          Shown in NaN minutes of usage
        </small>
      </label>
      <input
        className="css-1sq5wse"
        id="break-timer-time"
        onChange={[Function]}
        type="number"
        value={NaN}
      />
    </div>
  </div>
  <div
    className="css-102g4jn"
  >
    <div
      className="css-u7gedr"
      id="break-timer"
      onClick={[Function]}
    >
      <div
        className="css-fc7zzi"
      />
    </div>
    <h4
      className="css-jemg6l"
      htmlFor="break-timer"
    >
      Break Timer
    </h4>
  </div>
</div>
`;
